# GPIS-Splatting

./: .gitignore  .jscpd.json  .mega-linter.yml  CITATION.cff  README.md  pyproject.toml  requirements-dev.txt
.github/: actionlint.yaml
.github/actions/ensure-tanks-temples-assets/: action.yml
.github/workflows/: calibrated-confidence.yml  evaluation.yml  gpis-backend-benchmark.yml  gpis-splatting-ci.yml  matrix-with-backend-benchmark.yml  mega-linter.yml  nightly-cpu-evidence.yml  paper-synthetic-benchmark.yml  prepare-tanks-temples-cache.yml  self-hosted-calibrated-confidence-evaluation.yml  self-hosted-gpu-smoke.yml  tanks-temples-preliminary.yml  train-3dgs-baseline.yml  trained-3dgs-photometric-evaluation.yml
benchmarks/: mipnerf360_sparse_12view.json
configs/: README.md
configs/evaluation/: synthetic_ci.json  synthetic_quick.json
configs/real/: poster8_smoke.json
configs/tanks_temples/: ignatius_geometry.json
configs/trained_3dgs/: paper_grade_comparison.json  trained_3dgs_confidence.json
docs/: 3dgs_training_regularization.md  architecture.md  calibrated_confidence.md  calibrated_confidence_api.md  depth_normal_confidence.md  development.md  experiment_matrix.md  faithful_real_3dgs_renderer.md  geometry_aware_splat_finalization.md  gpis_aware_initialization.md  gpis_backend_benchmark.md  gpis_gated_gaussian_surfaces.md  gpis_training_prior_runtime.md  gpis_zero_level_initialization.md  gsplat_adapter.md  large_scale_gpis_scoring.md  paper_grade_3dgs_comparison.md  psnr_constrained_pareto_selection.md  quickstart.md  real_data.md  render_consistency.md  render_scale_diagnostics.md  reproduce_paper_results.md  scale_robust_rendering.md  tanks_temples.md  trained_3dgs_integration.md
gpis_splatting/: __init__.py  paths.py  renderer.py  scenes.py  serialization.py  visualization.py
gpis_splatting/cli/: __init__.py  fit_gpis.py  generate_scene.py  render_splats.py
src/gpis_splatting/: __init__.py  actual_trained_3dgs_af_matrix.py  backend_benchmark.py  baseline_photometry.py  calibrated_confidence_api.py  colmap_camera_models.py  colmap_render_mapping.py  confidence.py  depth_normal_supervision.py  evaluation.py  evaluation_config.py  experiment_matrix.py  external_3dgs.py  feedback.py  gaussian_native_features.py  gaussian_surface.py  geometry_aware_splat_export.py  gpis.py  gpis_3dgs_optimization.py  gpis_3dgs_regularization.py  gpis_3dgs_training_prior.py  gpis_backends.py  gpis_initialization.py  gpis_regularization.py  gpis_training_policy.py  gpis_training_prior.py  gpis_training_result_workflow.py  gpis_training_runtime.py  graphdeco_patch.py  gsplat_adapter.py  gsplat_fidelity_adapter.py  large_scale_gpis.py  math_utils.py  metrics.py  paper_3dgs_comparison.py  paths.py  prepared_colmap_export.py  primary_confidence.py  real_3dgs_renderer.py  real_alignment.py  (+37 more)
src/gpis_splatting/cli/: append_backend_benchmark_to_matrix_report.py  apply_calibrated_confidence.py  audit_real_renders.py  augment_depth_normal_supervision.py  benchmark_gpis_backends.py  benchmark_scalable_gpis_backends.py  bootstrap_real_gpis.py  bootstrap_robust_real_gpis.py  calibrate_gpis_splat_scores.py  convert_3dgs_ply_to_splats.py  diagnose_real_alignment.py  diagnose_real_render.py  diagnose_tanks_temples_gates.py  diagnose_tanks_temples_gpis_field_scores.py  download_real_scene.py  download_tanks_temples_scene.py  evaluate.py  evaluate_3dgs_gpis_surfaces.py  evaluate_3dgs_variant_renders.py  evaluate_real_renders.py  evaluate_render_consistency.py  evaluate_tanks_temples_geometry.py  export_3dgs_gpis_variants.py  export_gpis_training_policy.py  export_gpis_training_prior.py  export_prepared_scene_to_colmap_3dgs.py  extract_3dgs_gpis_surfaces.py  finalize_geometry_aware_splats.py  fit_calibrated_confidence.py  fit_gpis.py  fit_real_gpis.py  generate_scene.py  initialize_gpis_splats.py  initialize_gpis_zero_level_splats.py  map_3dgs_renders_to_prepared_scene.py  prepare_real_scene.py  prepare_tanks_temples_scene.py  render_3dgs_with_gsplat.py  render_real_splats.py  render_splats.py  (+23 more)
tests/: conftest.py  test_backend_benchmark.py  test_backend_benchmark_matrix_report.py  test_calibrated_confidence.py  test_calibrated_confidence_api.py  test_colmap_camera_models.py  test_confidence_bundle.py  test_depth_normal_supervision.py  test_evaluate_synthetic.py  test_evaluation_multiview.py  test_evaluation_preset_config.py  test_experiment_matrix.py  test_external_3dgs.py  test_gaussian_native_features.py  test_gaussian_surface.py  test_geometry_aware_splat_export.py  test_gpis.py  test_gpis_3dgs_optimization.py  test_gpis_3dgs_regularization.py  test_gpis_3dgs_training_prior.py  test_gpis_backends.py  test_gpis_initialization.py  test_gpis_regularization.py  test_gpis_training_prior.py  test_gpis_training_result_workflow.py  test_gpis_training_runtime.py  test_graphdeco_patch.py  test_gsplat_adapter.py  test_large_scale_gpis.py  test_metrics.py  test_paper_3dgs_comparison.py  test_pipeline.py  test_prepared_colmap_export.py  test_primary_confidence.py  test_random_same_retention_filtering.py  test_real_3dgs_renderer.py  test_real_benchmark_metrics.py  test_real_data.py  test_real_gate_diagnostics.py  test_real_geometry_path_resolution.py  (+12 more)
