[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpis-splatting-bootstrap"
version = "0.1.0"
description = "Minimal synthetic GPIS to uncertainty-gated splat rendering prototype."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
  "pandas",
  "Pillow",
]

[project.scripts]
generate_scene = "gpis_splatting.cli.generate_scene:main"
fit_gpis = "gpis_splatting.cli.fit_gpis:main"
render_splats = "gpis_splatting.cli.render_splats:main"
evaluate = "gpis_splatting.cli.evaluate:main"
run_ablation = "gpis_splatting.cli.run_ablation:main"
summarize_ablation = "gpis_splatting.cli.summarize_ablation:main"
run_evaluation = "gpis_splatting.cli.run_evaluation:main"
prepare_real_scene = "gpis_splatting.cli.prepare_real_scene:main"
validate_real_scene = "gpis_splatting.cli.validate_real_scene:main"
evaluate_real_renders = "gpis_splatting.cli.evaluate_real_renders:main"
download_real_scene = "gpis_splatting.cli.download_real_scene:main"
bootstrap_real_gpis = "gpis_splatting.cli.bootstrap_real_gpis:main"
fit_real_gpis = "gpis_splatting.cli.fit_real_gpis:main"
render_real_splats = "gpis_splatting.cli.render_real_splats:main"
run_real_evaluation = "gpis_splatting.cli.run_real_evaluation:main"
diagnose_real_render = "gpis_splatting.cli.diagnose_real_render:main"
download_tanks_temples_scene = "gpis_splatting.cli.download_tanks_temples_scene:main"
prepare_tanks_temples_scene = "gpis_splatting.cli.prepare_tanks_temples_scene:main"
evaluate_tanks_temples_geometry = "gpis_splatting.cli.evaluate_tanks_temples_geometry:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 180
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpis_splatting*"]
