[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpis-splatting-bootstrap"
version = "0.1.0"
description = "Minimal synthetic GPIS to uncertainty-gated splat rendering prototype."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
  "pandas",
  "Pillow",
]

[project.scripts]
generate_scene = "gpis_splatting.cli.generate_scene:main"
fit_gpis = "gpis_splatting.cli.fit_gpis:main"
render_splats = "gpis_splatting.cli.render_splats:main"
evaluate = "gpis_splatting.cli.evaluate:main"
run_ablation = "gpis_splatting.cli.run_ablation:main"
summarize_ablation = "gpis_splatting.cli.summarize_ablation:main"
run_evaluation = "gpis_splatting.cli.run_evaluation:main"
prepare_real_scene = "gpis_splatting.cli.prepare_real_scene:main"
validate_real_scene = "gpis_splatting.cli.validate_real_scene:main"
evaluate_real_renders = "gpis_splatting.cli.evaluate_real_renders:main"
download_real_scene = "gpis_splatting.cli.download_real_scene:main"
bootstrap_real_gpis = "gpis_splatting.cli.bootstrap_real_gpis:main"
fit_real_gpis = "gpis_splatting.cli.fit_real_gpis:main"
render_real_splats = "gpis_splatting.cli.render_real_splats:main"
audit_real_renders = "gpis_splatting.cli.audit_real_renders:main"
run_real_evaluation = "gpis_splatting.cli.run_real_evaluation:main"
diagnose_real_render = "gpis_splatting.cli.diagnose_real_render:main"
diagnose_real_alignment = "gpis_splatting.cli.diagnose_real_alignment:main"
run_real_render_parameter_sweep = "gpis_splatting.cli.run_real_render_parameter_sweep:main"
download_tanks_temples_scene = "gpis_splatting.cli.download_tanks_temples_scene:main"
prepare_tanks_temples_scene = "gpis_splatting.cli.prepare_tanks_temples_scene:main"
evaluate_tanks_temples_geometry = "gpis_splatting.cli.evaluate_tanks_temples_geometry:main"
run_tanks_temples_gate_sweep = "gpis_splatting.cli.run_tanks_temples_gate_sweep:main"
diagnose_tanks_temples_gates = "gpis_splatting.cli.diagnose_tanks_temples_gates:main"
run_real_gpis_gate_model_sweep = "gpis_splatting.cli.run_real_gpis_gate_model_sweep:main"
diagnose_tanks_temples_gpis_field_scores = "gpis_splatting.cli.diagnose_tanks_temples_gpis_field_scores:main"
calibrate_gpis_splat_scores = "gpis_splatting.cli.calibrate_gpis_splat_scores:main"
run_tanks_temples_hard_negative_calibration = "gpis_splatting.cli.run_tanks_temples_hard_negative_calibration:main"
run_tanks_temples_calibrated_splat_filtering = "gpis_splatting.cli.run_tanks_temples_calibrated_splat_filtering:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpis_splatting*"]
