[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpis-splatting-bootstrap"
version = "0.1.0"
description = "Minimal synthetic GPIS to uncertainty-gated splat rendering prototype."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "matplotlib",
  "pandas",
  "Pillow",
]

[project.optional-dependencies]
gsplat = [
  "gsplat",
]
faiss = [
  "faiss-cpu",
]

[project.scripts]
generate_scene = "gpis_splatting.cli.generate_scene:main"
fit_gpis = "gpis_splatting.cli.fit_gpis:main"
render_splats = "gpis_splatting.cli.render_splats:main"
evaluate = "gpis_splatting.cli.evaluate:main"
run_ablation = "gpis_splatting.cli.run_ablation:main"
summarize_ablation = "gpis_splatting.cli.summarize_ablation:main"
run_evaluation = "gpis_splatting.cli.run_evaluation:main"
prepare_real_scene = "gpis_splatting.cli.prepare_real_scene:main"
validate_real_scene = "gpis_splatting.cli.validate_real_scene:main"
evaluate_real_renders = "gpis_splatting.cli.evaluate_real_renders:main"
evaluate_render_consistency = "gpis_splatting.cli.evaluate_render_consistency:main"
download_real_scene = "gpis_splatting.cli.download_real_scene:main"
bootstrap_real_gpis = "gpis_splatting.cli.bootstrap_real_gpis:main"
initialize_gpis_splats = "gpis_splatting.cli.initialize_gpis_splats:main"
fit_real_gpis = "gpis_splatting.cli.fit_real_gpis:main"
augment_depth_normal_supervision = "gpis_splatting.cli.augment_depth_normal_supervision:main"
initialize_gpis_zero_level_splats = "gpis_splatting.cli.initialize_gpis_zero_level_splats:main"
render_real_splats = "gpis_splatting.cli.render_real_splats:main"
audit_real_renders = "gpis_splatting.cli.audit_real_renders:main"
run_real_evaluation = "gpis_splatting.cli.run_real_evaluation:main"
diagnose_real_render = "gpis_splatting.cli.diagnose_real_render:main"
diagnose_real_alignment = "gpis_splatting.cli.diagnose_real_alignment:main"
run_real_render_parameter_sweep = "gpis_splatting.cli.run_real_render_parameter_sweep:main"
download_tanks_temples_scene = "gpis_splatting.cli.download_tanks_temples_scene:main"
prepare_tanks_temples_scene = "gpis_splatting.cli.prepare_tanks_temples_scene:main"
evaluate_tanks_temples_geometry = "gpis_splatting.cli.evaluate_tanks_temples_geometry:main"
run_tanks_temples_gate_sweep = "gpis_splatting.cli.run_tanks_temples_gate_sweep:main"
diagnose_tanks_temples_gates = "gpis_splatting.cli.diagnose_tanks_temples_gates:main"
run_real_gpis_gate_model_sweep = "gpis_splatting.cli.run_real_gpis_gate_model_sweep:main"
diagnose_tanks_temples_gpis_field_scores = "gpis_splatting.cli.diagnose_tanks_temples_gpis_field_scores:main"
calibrate_gpis_splat_scores = "gpis_splatting.cli.calibrate_gpis_splat_scores:main"
apply_calibrated_confidence = "gpis_splatting.cli.apply_calibrated_confidence:main"
fit_calibrated_confidence = "gpis_splatting.cli.fit_calibrated_confidence:main"
run_tanks_temples_hard_negative_calibration = "gpis_splatting.cli.run_tanks_temples_hard_negative_calibration:main"
run_tanks_temples_calibrated_splat_filtering = "gpis_splatting.cli.run_tanks_temples_calibrated_splat_filtering:main"
run_tanks_temples_calibrated_confidence = "gpis_splatting.cli.run_tanks_temples_calibrated_confidence:main"
convert_3dgs_ply_to_splats = "gpis_splatting.cli.convert_3dgs_ply_to_splats:main"
export_prepared_scene_to_colmap_3dgs = "gpis_splatting.cli.export_prepared_scene_to_colmap_3dgs:main"
map_3dgs_renders_to_prepared_scene = "gpis_splatting.cli.map_3dgs_renders_to_prepared_scene:main"
export_3dgs_gpis_variants = "gpis_splatting.cli.export_3dgs_gpis_variants:main"
evaluate_3dgs_variant_renders = "gpis_splatting.cli.evaluate_3dgs_variant_renders:main"
render_3dgs_with_gsplat = "gpis_splatting.cli.render_3dgs_with_gsplat:main"
validate_3dgs_baseline_photometry = "gpis_splatting.cli.validate_3dgs_baseline_photometry:main"
run_trained_3dgs_gpis_experiment = "gpis_splatting.cli.run_trained_3dgs_gpis_experiment:main"
export_gpis_training_prior = "gpis_splatting.cli.export_gpis_training_prior:main"
run_scale_robust_rendering_experiment = "gpis_splatting.cli.run_scale_robust_rendering_experiment:main"
export_gpis_training_policy = "gpis_splatting.cli.export_gpis_training_policy:main"
benchmark_gpis_backends = "gpis_splatting.cli.benchmark_gpis_backends:main"
write_graphdeco_gpis_patch = "gpis_splatting.cli.write_graphdeco_gpis_patch:main"
write_reproducibility_report = "gpis_splatting.cli.write_reproducibility_report:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpis_splatting*"]
